# ritvik

./: .gitignore  MANIFEST.in  settings.ini
.github/: ISSUE_TEMPLATE.md
.github/hooks/: pre-commit
.github/instructions/: general-coding-instructions copy.md  general-coding-instructions.md  process-task-list.mdc
docs/specifications/business/: product_requirements.md
docs/specifications/functional/: api_design.md  overview.md
docs/specifications/technical/: architecture.md
docs/stylesheets/: extra.css
nbs/: 0-greet.ipynb  1-pydantic-ai.ipynb  index.ipynb
ritvik/: .travis.yml  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  ruff.toml  tox.ini
ritvik/.github/instructions/: create-documentation.mdc  create-prd.mdc
ritvik/docs/: index.md
ritvik/docs/user-manual/: getting_started.md
ritvik/requirements/: dev.txt
ritvik/src/ritvik/: __pre_init__.py  excel_utils.py  health.py
ritvik/tests/: __init__.py
src/ritvik/: __init__.py  main.py  models.py  tasks.xlsx
src/ritvik/utils/: ollama.py
tests/: test_ritvik.py
