[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ritvik"
version = "0.1.0"
description = "Google chat bot"
readme = "README.rst"
authors = [
  {name = "Abhilash Adunuri", email = "abhilashadunuri@divami.com"}
]
maintainers = [
  {name = "Abhilash Adunuri", email = "abhilashadunuri@divami.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "nbdev"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/abhidivami/ritvik/issues"
changelog = "https://github.com/abhidivami/ritvik/blob/master/changelog.md"
homepage = "https://github.com/abhidivami/ritvik"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
ritvik = "ritvik:cli"

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

